--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         <div class="col-sm-12">
           <div class="card">
             <div class="card-body">
-              <h3 class="card-title">Tu negocio</h3>
+              <h3 class="card-title">
+                <img src="./img/logo.png" class="img-fluid" alt="Kiibo" />
+                Tu negocio
+              </h3>
               <span class="p-descrip text-muted ">Comparte tus para tu nuevo negocio</span>
               <form>
                 <div class="mb-3">
