--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 
                 <div class="row">
                   <div class="col-6">
-                    <button type="button" class="">Continuar</button>
+                    <a href="./main.html" class="continuar" onclick="continuar()">Continuar</a>
                   </div>
   
                   <div class="col-sm-6 cont-pagina">
-                    <p class="text-muted"> Esta en <strong>1</strong>/2</p>
+                    <p class="text-muted"><strong>1</strong></p>
                   </div>
                   
                 </div>
@@ -71,10 +71,7 @@
       </div>
     </div>
 
-
- 
-
-
-
+   
   </body>
+
 </html>
